--- a/src/frontend/template.html
+++ b/src/frontend/template.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8" />
@@ -32,7 +33,7 @@
                 flex-direction: column;
                 margin: 0;
                 font-family: Arial, sans-serif;
-                font-size: 17px;
+                font-size: 1rem;
                 min-height: 100%;
                 min-height: 100vh;
                 min-height: 100dvh;
