--- a/src/frontend/template.html
+++ b/src/frontend/template.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="description" content="This website shows your public IP addresses and the backend resolver server IPs of your currently using DNS server." />
         <link
             rel="apple-touch-icon"
             sizes="180x180"
